--- a/core/src/main/res/layout/activity_detail.xml
+++ b/core/src/main/res/layout/activity_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.detail.DetailActivity">
+    tools:context="com.dicoding.core.com.dicoding.core.DetailActivity">
 
     <ImageView
         android:id="@+id/img_poster_banner"
