--- a/core/src/main/res/layout/item_row_movie.xml
+++ b/core/src/main/res/layout/item_row_movie.xml
@@ -55,7 +55,8 @@
             card_view:layout_constraintEnd_toStartOf="@id/tv_item_rating"
             card_view:layout_constraintStart_toEndOf="@id/img_item_poster"
             card_view:layout_constraintTop_toBottomOf="@id/tv_item_title"
-            card_view:layout_constraintVertical_bias="0.0" />
+            card_view:layout_constraintVertical_bias="0.0"
+            android:contentDescription="@string/tools_rating"/>
 
         <TextView
             android:id="@+id/tv_item_rating"
