--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -60,7 +60,6 @@
         android:src="@drawable/ic_baseline_star_rate_24"
         android:contentDescription="@string/review"
         app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
-        app:layout_constraintBottom_toTopOf="@id/table"
         app:layout_constraintStart_toEndOf="@id/cv_detail_poster"
         app:layout_constraintEnd_toStartOf="@id/tv_detail_rating"/>
 
@@ -115,19 +114,6 @@
         app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
         app:layout_constraintStart_toEndOf="@id/tv_rating_count"/>
 
-    <TableLayout
-        android:id="@+id/table"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toEndOf="@id/cv_detail_poster"
-        app:layout_constraintTop_toBottomOf="@id/icon_star"
-        app:layout_constraintEnd_toEndOf="parent" >
-
-    </TableLayout>
-
     <TextView
         android:id="@+id/tv_sinopsis"
         android:layout_width="match_parent"
@@ -138,25 +124,30 @@
         android:layout_marginEnd="28dp"
         android:layout_marginTop="28dp"
         app:layout_constraintTop_toBottomOf="@id/cv_detail_poster"
-        app:layout_constraintBottom_toTopOf="@id/tv_detail_sinopsis"
+        app:layout_constraintBottom_toTopOf="@id/sv_sinopsis"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="@string/sinopsis" />
 
-    <TextView
-        android:id="@+id/tv_detail_sinopsis"
+    <ScrollView
+        android:id="@+id/sv_sinopsis"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginEnd="28dp"
         app:layout_constraintTop_toBottomOf="@id/tv_sinopsis"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="@string/sinopsis" />
+        app:layout_constraintEnd_toEndOf="parent">
+        <TextView
+            android:id="@+id/tv_detail_sinopsis"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginEnd="28dp"
+            tools:text="@string/sinopsis" />
+    </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_favorite"
